2005-07-11  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump.

=== gnome-vfs 2.11.4 ===

2005-07-11  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release.

2005-07-08  Federico Mena Quintero  <federico@ximian.com>

	* libgnomevfs/gnome-vfs-cancellable-ops.c
	(gnome_vfs_find_directory_cancellable): Canonicalize the near_uri
	unconditionally.  If we are finding a trash directory, we also
	need to look at the real device, not the device on which the
	symlink is stored.  Also, return an error if we cannot
	canonicalize the symlink.

2005-07-08  Paolo Borelli  <pborelli@katamail.com>

	* libgnomevfs/gnome-vfs-xfer.[ch]: add an option to not
	preserve permissions when xfering a file. Bug 309604.

2005-07-07  David Zeuthen  <davidz@redhat.com>

	* libgnomevfs/gnome-vfs-hal-mounts.c (_hal_drive_policy_get_icon):
	Support storage.icon.drive property for icon supplied by vendor
	(_hal_volume_policy_get_icon): -do- for storage.icon.volume
	(_hal_add_volume): Reuse GnomeVFSDrive object if it already
	exists

2005-07-05  Christian Kellner  <gicmo@gnome.org>

	Second part of the even-more-rocking-hal-support by
	David Zeuthen  <davidz@redhat.com>:
	
	Fixes pointed out by Alexander Larsson.

	* libgnomevfs/gnome-vfs-hal-mounts.h: Don't define 
	HAL_MOUNTS_INVALID_URI as it's actually not used

	* libgnomevfs/gnome-vfs-hal-mounts.c: Uncomment a lot of g_debug calls
	(GnomeVFSHalUserData): Add display_* settings from gconf
	(_hal_size_as_string): Delete this function
	(_hal_drive_policy_get_display_name): Use
	gnome_vfs_format_file_size_ for_display instead of
	_hal_size_as_string
	(_hal_drive_policy_check): Use settings from GnomeVFSHalUserData
	instead of calling into gconf
	(_hal_add_drive_without_volumes): Set activation_uri to empty
	string instead of HAL_MOUNTS_INVALID_URI
	(_hal_add_volume): Don't attempt to reuse a drive if it's already
	there - instead just delete the drive and add a new one. Also set